<resources>
    <!-- strings -->
    <string name="app_name">AndroidImageTest</string>
    <string name="label_text">Android Image Test</string>
    <string name="no_progress">no progress</string>
    <string name="button_text_start">Start</string>
    <string name="button_text_stop">Stop</string>
    <string name="button_text_save">Save</string>
    <string name="button_text_cut">Cut</string>

    <!-- settings -->
    <string name="title_activity_setting">Settings</string>
    <string name="preference_save_net_mode">save_net_mode</string>
    <string name="preference_auto_save_mode">auto_save_mode</string>
    <string name="preference_clear_cache">clear_cache</string>

</resources>
