<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/spacing_normal"
    tools:context="com.xhg.test.image.picturedetail.PictureDetailActivity">

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/label_text" />

    <RelativeLayout
        android:id="@+id/image_container"
        android:layout_width="match_parent"
        android:layout_height="370dp"
        android:layout_below="@+id/text">

        <ImageView
            android:id="@+id/image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@drawable/empty_image_300dp" />
    </RelativeLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/progress_text"
        android:layout_centerHorizontal="true"
        style= "?android:attr/progressBarStyleHorizontal"
        android:max="100"
        android:progress= "0"/>

    <TextView
        android:id="@+id/progress_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bottom_button"
        android:layout_marginBottom="@dimen/spacing_small"
        android:layout_centerHorizontal="true"
        android:text="@string/no_progress" />

    <LinearLayout
        android:id="@+id/bottom_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/start_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_text_start"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/button_text_save"
            android:textAllCaps="false" />
    </LinearLayout>

</RelativeLayout>
